--- a/templates/edit.html.j2
+++ b/templates/edit.html.j2
@@ -16,6 +16,7 @@
 
                     <input class="btn btn-success float-right" type="submit" value="Modifier"/>
                 </form>
+                <a href="{{ url_for('admin') }}">Retour à l'administration</a>
             </div>
         </div>
     </div>
