[View] add link on delete

--- a/templates/delete.html.j2
+++ b/templates/delete.html.j2
@@ -3,7 +3,7 @@
 {% block title %}Supprimer un site{% endblock %}
 
 {% block body %}
-    <h1 class="text-center mt-5 mb-5">Vouslez-vous vraiment supprimer le site de la liste ?</h1>
+    <h1 class="text-center mt-5 mb-5">Voulez-vous vraiment supprimer le site <a href="{{ site }}" target="_blank">{{ site }}</a> de la liste ?</h1>
 
     <div class="container">
         <div class="row">
